--- a/caAERS eLearning/build.xml
+++ b/caAERS eLearning/build.xml
@@ -5,7 +5,7 @@
 	<property name="captivate.dir" location="captivate"/>
 	<property name="release.dir" location="release"/>
 	<property name="release.notes" value="RELEASE_NOTES.txt"/>
-	<property name="version" value="0.2"/>
+	<property name="version" value="0.3"/>
 
     <target name="clean">
         <delete dir="${build.dir}"/>
@@ -13,6 +13,7 @@
 			<fileset dir="${captivate.dir}" includes="**/*.cptx_lock"/>
 			<fileset dir="${captivate.dir}" includes="**/standard.js"/>
 			<fileset dir="${captivate.dir}" includes="**/*.htm"/>
+			<fileset dir="${captivate.dir}" includes="**/*(Autosaved).txt"/>
 			<fileset dir="${web.dir}/lessons" includes="**/standard.js"/>
 			<fileset dir="${web.dir}/lessons" includes="**/*.htm"/>
 			<fileset dir="${web.dir}" includes="**/.tmp_*" defaultexcludes="false"/>
