--- a/archives/Phase-3/2.7-M2/caxchange.properties
+++ b/archives/Phase-3/2.7-M2/caxchange.properties
@@ -23,6 +23,7 @@ PRIOR_THERAPY_WS_BINDING_URL=https://yourserver:port/caaers/services/PriorTherap
 STUDY_WS_BINDING_URL=https://yourserver:port/caaers/services/StudyService
 LAB_WS_BINDING_URL=https://yourserver:port/caaers/services/LabService
 CTC_WS_BINDING_URL=https://yourserver:port/caaers/services/CtcsService
+PARTICIPANT_WS_BINDING_URL=https://yourserver:port/caaers/services/ParticipantService
 
 #ServiceMix - Webservice details - should end with a slash
 GENERIC_PROCESSOR_WS_LOCATION=https://your.ip.address:8196/
