--- a/archives/Phase-3/2.7-M7/caxchange.properties
+++ b/archives/Phase-3/2.7-M7/caxchange.properties
@@ -67,3 +67,5 @@ PART_IS_PASSWORD=rartsigermai-11
 #---------------------------------------------------------------------------------------------------------------------
 safetyReportEDIInputDir=data/log/e2b/input/
 safetyReportEDIOutputDir=data/log/e2b/output/
+
+http.conduit.config=http-conduit-config.xml
